--- a/app/src/main/res/layout/activity_super_admin_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_perfil.xml
@@ -44,7 +44,7 @@
 
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/bt_exit"
             style="?attr/materialIconButtonFilledStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -291,7 +291,7 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="670dp"
+        android:layout_marginTop="677dp"
         app:layout_anchorGravity="bottom|center"
         app:layout_constraintBottom_toBottomOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
