--- a/app/src/main/res/layout/activity_super_admin_restaurante_ubicacion.xml
+++ b/app/src/main/res/layout/activity_super_admin_restaurante_ubicacion.xml
@@ -23,19 +23,20 @@
             app:title="@string/title"
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+    <LinearLayout
+        android:layout_marginTop="90dp"
+            android:layout_width="wrap_content"
+            android:layout_height="590dp"
             android:orientation="vertical">
 
 
             <com.google.android.material.card.MaterialCardView
                 style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="411dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
                 android:layout_marginBottom="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,165 +123,162 @@
 
             </com.google.android.material.card.MaterialCardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_ganancias"
+                android:onClick="vistaRestauranteResumen"
+                android:layout_width="80sp"
+                android:layout_height="35sp"
+                android:layout_marginStart="12sp"
+                android:backgroundTint="@color/light_green"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:paddingLeft="-5sp"
+                android:paddingRight="-5sp"
+                android:text="Ganancias"
+                android:textSize="12sp"
+                app:backgroundTint="@color/light_green" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_carta"
+                android:onClick="vistaRestaurantePlatillos"
+                android:layout_width="80sp"
+                android:layout_height="35sp"
+                android:layout_marginStart="5sp"
+                android:backgroundTint="@color/light_green"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:paddingLeft="-5sp"
+                android:paddingRight="-5sp"
+                android:text="Carta"
+                android:textSize="12sp"
+                app:backgroundTint="@color/light_green" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_ventas"
+                android:onClick="vistaRestauranteHistorialVentas"
+                android:layout_width="80sp"
+                android:layout_height="35sp"
+                android:layout_marginStart="5sp"
+                android:backgroundTint="@color/light_green"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:paddingLeft="-5sp"
+                android:paddingRight="-5sp"
+                android:text="Ventas"
+                android:textSize="12sp"
+                app:backgroundTint="@color/light_green" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_ubicacion"
+                android:onClick="vistaRestauranteUbicacion"
+                android:layout_width="80sp"
+                android:layout_height="35sp"
+                android:layout_marginStart="5sp"
+                android:backgroundTint="@color/light_green"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:paddingLeft="-5sp"
+                android:paddingRight="-5sp"
+                android:textColor="@color/black"
+                android:text="Ubicación"
+                android:textSize="12sp"
+                app:backgroundTint="@color/light_green" />
+
+        </LinearLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            style="?attr/materialCardViewElevatedStyle"
+            android:layout_width="372dp"
+            android:layout_height="415dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.075"
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="525dp"
-                android:layout_marginTop="2dp"
-                android:orientation="vertical">
-
-
+                android:layout_height="415dp"
+                android:layout_marginStart="2dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:orientation="horizontal">
+                    android:layout_height="410dp"
+                    android:orientation="vertical">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_ganancias"
-                        android:onClick="vistaRestauranteResumen"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="12sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:text="Ganancias"
-                        android:textSize="12sp"
-                        app:backgroundTint="@color/light_green" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Ubicación del local: "
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                    <LinearLayout
+                        android:id="@+id/linearLayout2"
+                        android:layout_width="311dp"
+                        android:layout_height="375dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="6dp"
+                        android:orientation="vertical"
+                        app:layout_anchor="@+id/linearLayout"
+                        app:layout_anchorGravity="center">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_carta"
-                        android:onClick="vistaRestaurantePlatillos"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="5sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:text="Carta"
-                        android:textSize="12sp"
-                        app:backgroundTint="@color/light_green" />
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="0.1dp"
+                            android:hint="Ubicación">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_ventas"
-                        android:onClick="vistaRestauranteHistorialVentas"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="5sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:text="Ventas"
-                        android:textSize="12sp"
-                        app:backgroundTint="@color/light_green" />
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/ubicacionRestaurante"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="text"
+                                android:text=" "
+                                app:startIconDrawable="@drawable/baseline_fmd_good_24"
+                                />
+                        </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_ubicacion"
-                        android:onClick="vistaRestauranteUbicacion"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="5sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:textColor="@color/black"
-                        android:text="Ubicación"
-                        android:textSize="12sp"
-                        app:backgroundTint="@color/light_green" />
+                        <ImageView
+                            android:id="@+id/fotoRepartidor"
+                            android:layout_width="210dp"
+                            android:layout_height="210dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="15dp"
+                            android:src="@drawable/mapa"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
-
-                <com.google.android.material.card.MaterialCardView
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="372dp"
-                    android:layout_height="440dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.075"
-                    app:layout_constraintStart_toStartOf="parent">
-
-                    <LinearLayout
-                        android:layout_width="357dp"
-                        android:layout_height="490dp"
-                        android:layout_marginStart="10dp"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="480dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_marginStart="16dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:text="Ubicación del local: "
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
-                            <LinearLayout
-                                android:id="@+id/linearLayout2"
-                                android:layout_width="311dp"
-                                android:layout_height="385dp"
-                                android:layout_marginStart="16dp"
-                                android:layout_marginTop="6dp"
-                                android:orientation="vertical"
-                                app:layout_anchor="@+id/linearLayout"
-                                app:layout_anchorGravity="center">
-
-                                <com.google.android.material.textfield.TextInputLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="0.1dp"
-                                    android:hint="Ubicación">
-
-                                    <com.google.android.material.textfield.TextInputEditText
-                                        android:id="@+id/ubicacionRestaurante"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:inputType="text"
-                                        android:text=" "
-                                        app:startIconDrawable="@drawable/baseline_fmd_good_24"
-                                        />
-                                </com.google.android.material.textfield.TextInputLayout>
-
-                                <ImageView
-                                    android:id="@+id/fotoRepartidor"
-                                    android:layout_width="210dp"
-                                    android:layout_height="210dp"
-                                    android:layout_gravity="center_horizontal"
-                                    android:layout_marginTop="15dp"
-                                    android:src="@drawable/mapa"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <LinearLayout
-                                    android:layout_width="285dp"
-                                    android:layout_height="89dp"
-                                    android:layout_margin="5dp"
-                                    android:gravity="center_vertical|center_horizontal"
-                                    android:orientation="horizontal">
-
-
-                                </LinearLayout>
-                            </LinearLayout>
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-
             </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginTop="679dp"
+        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_superadmin"
+        tools:layout_editor_absoluteX="-14dp"
+        tools:layout_editor_absoluteY="578dp" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+<!--
+
+-->
