--- a/app/src/main/res/layout/irv_sup_admin_carta_list.xml
+++ b/app/src/main/res/layout/irv_sup_admin_carta_list.xml
@@ -7,12 +7,12 @@
 
     <com.google.android.material.card.MaterialCardView
         style="?attr/materialCardViewElevatedStyle"
-        android:layout_width="185dp"
+        android:layout_width="178dp"
         android:layout_height="210dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,36 +20,36 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgCarta1"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:contentDescription="foodImage"
-                android:onClick="vistaUnPlato"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/hamburguesa_royal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:padding="3dp">
 
                 <TextView
-                    android:id="@+id/tv_name1"
+                    android:id="@+id/tv_nameR"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:text="Hamburguesa Royal"
+                    android:textSize="18sp"
                     android:textAppearance="?attr/textAppearanceTitleMedium"
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/tv_price1"
+                    android:id="@+id/tv_priceR"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="3dp"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:text="S/12.00"
+                    android:textSize="14sp"
                     android:textAppearance="?attr/textAppearanceBodyMedium"
                     android:textColor="@color/black" />
             </LinearLayout>
@@ -81,4 +81,9 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+
+-->
