--- a/app/src/main/res/layout/activity_super_admin_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_perfil.xml
@@ -72,6 +72,7 @@
 
             <Button
                 android:id="@+id/bt_fotoSA"
+                android:onClick="openGalleryOrCamera"
                 style="?attr/materialIconButtonFilledStyle"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
