--- a/app/src/main/res/layout/activity_super_admin_registro_restaurante1.xml
+++ b/app/src/main/res/layout/activity_super_admin_registro_restaurante1.xml
@@ -67,7 +67,7 @@
         <LinearLayout
             android:id="@+id/linearLayout4"
             android:layout_width="360dp"
-            android:layout_height="401dp"
+            android:layout_height="450dp"
             android:layout_margin="5dp"
             android:background="@drawable/layout_border"
             android:orientation="horizontal"
@@ -77,7 +77,7 @@
             <LinearLayout
                 android:id="@+id/linearLayout2"
                 android:layout_width="320dp"
-                android:layout_height="385dp"
+                android:layout_height="410dp"
                 android:layout_marginStart="23dp"
                 android:layout_marginTop="14dp"
                 android:orientation="vertical"
@@ -112,7 +112,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="70dp"
                     android:orientation="horizontal">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -150,6 +150,29 @@
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="143dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgLogo"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:src="@drawable/baseline_file_upload_24" />
+
+                    <TextView
+                        android:id="@+id/tv_logo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        android:text="Subir Logo"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+                <!--
                 <LinearLayout
                     android:layout_width="288dp"
                     android:layout_height="72dp"
@@ -166,6 +189,7 @@
                         app:strokeColor="@color/md_theme_onBackground"
                         app:strokeWidth="0.7dp" />
                 </LinearLayout>
+                -->
 
                 <LinearLayout
                     android:layout_width="285dp"
@@ -206,7 +230,7 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="28dp"
             app:layout_anchorGravity="bottom|center"
             app:layout_constraintBottom_toBottomOf="@id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
